2010-03-03  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/producers/soundcard/wizard_gtk.py:
	Check if samplerate is tuple or int. Fixes #1371.

2010-03-02  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/steps/conversionsteps.py:
	Ask the scenario if the stream has audio/video instead of getting the
	producer directly. Sometimes the same producer can offer audio-video or
	they can be already in the flow if we are adding a new stream/format.
	* flumotion/scenario/steps/productionsteps.py:
	Add two methods to set the audio/video producers.
	* flumotion/ui/wizard.py:
	Add a method to clear all the messages in wizard.

2010-03-02  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	Fix the flumotion-nagios stream command. In Python2.4 the properties of
	the object returned by urlparse.urlparse() cannot be access by name,
	only by index.

2010-03-02  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/test/test_component_httpserver_httpcached_strategy.py:
	Fix tests.

2010-03-02  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Reset ComponentView when performing actions on multiple components.

2010-02-25  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpcached/http_client.py:
	* flumotion/component/misc/httpserver/httpcached/request_manager.py:
	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
	Added the proxy info in some warning log entries.

2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/ui/Makefile.am:
	Remove ondemandbrowser.py

2010-02-25  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/misc/httpserver/Makefile.am:
	* flumotion/component/misc/httpserver/admin_gtk.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/httpserver/ondemandbrowser.py (added):
	* flumotion/ui/ondemandbrowser.py (deleted):