@@ -19,11 +19,41 @@
 
 # Headers in this file shall remain intact.
 
+from twisted.internet import reactor, defer
 from flumotion.common import testsuite
 from flumotion.component.base import watcher
+import tempfile
+import os
+import time
 
 
 class WatcherTest(testsuite.TestCase):
 
     def testInstantiate(self):
         watcher.BaseWatcher(30)
+
+    def testContiunePollingOnSubscriberError(self):
+
+        def cleanUp(_):
+            w.stop()
+
+        def fileDeleted(_):
+            d = defer.Deferred()
+            d.addCallback(cleanUp)
+            reactor.callLater(0, d.callback, _)
+            return d
+
+        def fileChanged(_):
+            os.remove(tempFile)
+            raise Exception("This exception shouldn't be raisen")
+
+        fd, tempFile = tempfile.mkstemp()
+        w = watcher.FilesWatcher([tempFile], 0.001)
+        w.subscribe(fileChanged = fileChanged)
+        d = defer.Deferred()
+        d.addCallback(fileDeleted)
+        w.subscribe(fileDeleted = d.callback)
+        w.start()
+        os.write(fd, "test")
+        os.close(fd)
+        return d
